--- a/pages/account-recharge-ok.html
+++ b/pages/account-recharge-ok.html
@@ -18,7 +18,7 @@
     <!-- 顶部导航条  -->
     <header class="am-topbar am-margin-bottom-0">
         <div class="am-container">
-            <h1 class="am-topbar-brand"><img src="/static/img/public/logo.png" height="30px" alt=""></h1>
+            <h1 class="am-topbar-brand"><img src="/static/img/logo.jpg" alt=""></h1>
             <div class="am-topbar-right am-text-sm topbar-more">
                 <a class="navbar-link active" href="#">我的账户</a>
                 <a class="navbar-link" href="#">退出</a>
