--- a/pages/reg2.html
+++ b/pages/reg2.html
@@ -18,7 +18,7 @@
     <!-- 顶部导航条  -->
     <header class="am-topbar am-margin-bottom-0">
         <div class="am-container">
-            <h1 class="am-topbar-brand"><img src="/static/img/public/logo.png" height="30px" alt=""></h1>
+            <h1 class="am-topbar-brand"><img src="/static/img/logo.jpg" alt=""></h1>
             <div class="am-topbar-right am-text-xs topbar-more topbar-sign">
                 <a class="navbar-link" href="#">登录</a>
                 <a class="navbar-link active" href="#">注册</a>
