--- a/pages/account-product-1.html
+++ b/pages/account-product-1.html
@@ -128,8 +128,8 @@
                         </div>
                         <div class="am-u-sm-5 am-vertical-align" style="height:90px;">
                             <div class=" am-vertical-align-middle">
-                                <a href="###" class="am-btn am-btn-sm am-btn-warning am-round">购&nbsp;&nbsp;买</a>
-                                <a href="###" class="am-btn am-btn-sm am-btn-orange am-round am-margin-left">赎&nbsp;&nbsp;回</a>
+                                <a href="./account-product-buy.html" class="am-btn am-btn-sm am-btn-warning am-round">购&nbsp;&nbsp;买</a>
+                                <a href="./account-product-ransom.html" class="am-btn am-btn-sm am-btn-orange am-round am-margin-left">赎&nbsp;&nbsp;回</a>
                             </div>
 
                         </div>
