--- a/pages/account.html
+++ b/pages/account.html
@@ -114,8 +114,8 @@
                             <div class="am-panel-bd account-card-sm am-text-center">
                                 <span class="account-card-price am-text-xxl am-vertical-align-middle">￥0</span>
                                 <div class="">
-                                    <a href="###" class="am-btn am-btn-warning am-round am-btn-xs"> &nbsp;&nbsp; 充&nbsp;&nbsp;值 &nbsp;&nbsp; </a>
-                                    <a href="###" class="am-btn am-btn-default am-round am-btn-xs"> &nbsp;&nbsp; 提&nbsp;&nbsp;现 &nbsp;&nbsp; </a>
+                                    <a href="./account-recharge.html" class="am-btn am-btn-warning am-round am-btn-xs"> &nbsp;&nbsp; 充&nbsp;&nbsp;值 &nbsp;&nbsp; </a>
+                                    <a href="./account-withdraw.html" class="am-btn am-btn-default am-round am-btn-xs"> &nbsp;&nbsp; 提&nbsp;&nbsp;现 &nbsp;&nbsp; </a>
                                 </div>
                             </div>
                         </div>
