--- a/pages/account-product-buy.html
+++ b/pages/account-product-buy.html
@@ -111,12 +111,12 @@
                 </div>
                 <div class="am-panel am-panel-default">
                     <div class="am-panel-bd">
-                        <form class="am-form am-form-horizontal am-margin-top-xl">
+                        <form action="./account-product-buy-submitting.html" class="am-form am-form-horizontal am-margin-top-xl">
                             <div class="am-form-group">
                                 <label for="doc-ipt-3" class="am-u-sm-3 am-form-label am-text-left">账户余额</label>
                                 <div class="am-u-sm-5 am-form-text">
                                     <span class="am-text-lg">￥0.00</span>
-                                    <a href="###" class="am-btn am-btn-warning am-btn-xs am-padding-left-sm am-round am-margin-left-lg">&nbsp; 充 &nbsp; 值 &nbsp;</a>
+                                    <a href="./account-recharge.html" class="am-btn am-btn-warning am-btn-xs am-padding-left-sm am-round am-margin-left-lg">&nbsp; 充 &nbsp; 值 &nbsp;</a>
                                 </div>
                                 <div class="am-u-sm-4"></div>
                             </div>
