--- a/pages/account-product-ransom.html
+++ b/pages/account-product-ransom.html
@@ -96,7 +96,7 @@
                     <div class="am-panel-bd am-cf">
                         <h1 class="am-u-sm-4 am-u-sm-centered am-u-lg-uncentered">赎回活期</h1>
                         <hr data-am-widget="divider" style="" class="am-divider am-divider-default" />
-                        <form class="am-form am-form-horizontal am-margin-top-xl am-margin-bottom-xl">
+                        <form action="./account-product-ransom-submitting.html" class="am-form am-form-horizontal am-margin-top-xl am-margin-bottom-xl">
                             <div class="am-form-group">
                                 <label for="doc-ipt-3" class="am-u-sm-3 am-form-label am-text-left">活期持有份额</label>
                                 <div class="am-u-sm-5 am-form-text">
