--- a/pages/account-recharge.html
+++ b/pages/account-recharge.html
@@ -103,7 +103,7 @@
                             </ul>
                             <div class="am-tabs-bd">
                                 <div data-tab-panel-0 class="am-tab-panel am-active">
-                                    <form class="am-form am-form-horizontal am-margin-top-xl">
+                                    <form action="./account-recharge-ok.html" class="am-form am-form-horizontal am-margin-top-xl">
                                         <div class="am-u-sm-12 am-form-tips">
                                             <p class="am-text-gray">
                                                 使用中国农业银行（尾号：**6688）充值
@@ -147,7 +147,7 @@
                                     </form>
                                 </div>
                                 <div data-tab-panel-1 class="am-tab-panel ">
-                                    <form class="am-form am-form-horizontal am-margin-top-xl">
+                                    <form action="" class="am-form am-form-horizontal am-margin-top-xl">
 
                                         <div class="am-form-group">
                                             <label for="doc-ipt-3" class="am-u-sm-3 am-form-label">充值金额</label>
