--- a/pages/account-security.html
+++ b/pages/account-security.html
@@ -85,7 +85,7 @@
             <div class="account-breadcrumb am-panel am-panel-default">
                 <div class="am-panel-bd">
                     <ol class="am-breadcrumb">
-                        <li><a href="#" class="am-icon-home">首页</a></li>
+                        <li><a href="./default.html" class="am-icon-home">首页</a></li>
                         <li class="am-active">安全设置</li>
                     </ol>
                 </div>
@@ -115,9 +115,9 @@
                         <li>
                             <p class="am-fr list-more am-text-right am-text-xs">
                                 上次登录记录：xxxxx 北京市 2015-11-11 12:00
-                                <a href="###">查看更多 > </a>
+                                <a href="./account-security-login-records.html">查看更多 > </a>
                             </p>
-                            <a href="#"><i class="am-icon-pencil am-icon-fw am-text-gray am-text-xl am-margin-left-xl am-margin-right-xl"></i>最近登录</a>
+                            <a href="./account-security-login-records.html"><i class="am-icon-pencil am-icon-fw am-text-gray am-text-xl am-margin-left-xl am-margin-right-xl"></i>最近登录</a>
                         </li>
                     </ul>
                 </div>
