--- a/pages/default.html
+++ b/pages/default.html
@@ -20,21 +20,21 @@
         <div class="am-container">
             <h1 class="am-topbar-brand"><img src="/static/img/logo.jpg" alt=""></h1>
             <div class="am-topbar-right am-text-xs topbar-more topbar-sign">
-                <a class="navbar-link active" href="#">登录</a>
-                <a class="navbar-link" href="#">注册</a>
+                <a class="navbar-link active" href="./login.html">登录</a>
+                <a class="navbar-link" href="./reg.html">注册</a>
             </div>
-            <div class="am-topbar-right am-text-sm topbar-more">
+            <div class="am-hide am-topbar-right am-text-sm topbar-more">
                 <a class="navbar-link active" href="#">我的账户</a>
                 <a class="navbar-link" href="#">退出</a>
             </div>
 
             <div class="am-collapse am-topbar-collapse" id="doc-topbar-collapse">
                 <ul class="am-nav am-nav-pills am-topbar-nav am-topbar-right">
-                    <li class="am-active"><a href="#">首页</a></li>
-                    <li><a href="#">活期</a></li>
-                    <li><a href="#">优选</a></li>
-                    <li><a href="#">稳赢</a></li>
-                    <li><a href="#">新手</a></li>
+                    <li class="am-active"><a href="./default.html">首页</a></li>
+                    <li><a href="./product-1.html">活期</a></li>
+                    <li><a href="./product-2.html">优选</a></li>
+                    <li><a href="./product-3.html">稳赢</a></li>
+                    <li><a href="./product-new.html">新手</a></li>
                 </ul>
             </div>
         </div>
@@ -43,34 +43,34 @@
 
     <!--  轮播图  -->
     <div class="layer-header">
+        <!--
         <div class="header-desc am-text-center">
-            <div class="am-container">
-                <div class="header-desc-content am-fr">
-                    <h2 class="am-slider-title">活期年化收益</h2>
-                    <p>6.19%</p>
-                    <p>快捷支取 | 本息安心</p>
-                    <a href="###" class="am-btn am-btn-xl">马上注册</a>
-                    <a href="###">立即登录</a>
-                </div>
-            </div>
+    <div class="am-container">
+        <div class="header-desc-content am-fr">
+            <h2 class="am-slider-title">活期年化收益</h2>
+            <p>6.19%</p>
+            <p>快捷支取 | 本息安心</p>
+            <a href="###" class="am-btn am-btn-xl">马上注册</a>
+            <a href="###">立即登录</a>
         </div>
+    </div>
+</div>
+-->
         <div data-am-widget="slider" class="header-slider am-slider am-slider-a1 " data-am-slider='{&quot;directionNav&quot;:false}'>
             <ul class="am-slides">
                 <li>
                     <img src="/static/pic/banner_index_1.jpg">
 
                 </li>
-                <!--
-<li>
-    <img src="/static/pic/banner_index_1.jpg">
-</li>
-<li>
-    <img src="/static/pic/banner_index_1.jpg">
-</li>
-<li>
-    <img src="/static/pic/banner_index_1.jpg">
-</li>
--->
+                <li>
+                    <img src="/static/pic/banner_index_1.jpg">
+                </li>
+                <li>
+                    <img src="/static/pic/banner_index_1.jpg">
+                </li>
+                <li>
+                    <img src="/static/pic/banner_index_1.jpg">
+                </li>
             </ul>
         </div>
     </div>
@@ -150,7 +150,7 @@
             ￥1,000.123
         </p>
         <p>
-            <button type="button" class="am-btn am-btn-danger am-btn-xl am-text-xl am-round product-btn">购&nbsp;&nbsp;买</button>
+            <a href="./account-product-buy.html" type="button" class="am-btn am-btn-danger am-btn-xl am-text-xl am-round product-btn">购&nbsp;&nbsp;买</a>
         </p>
         <p class="am-text-primary">
             每日10:00更新活期份额
@@ -162,7 +162,7 @@
             <img src="/static/pic/product_index_2.jpg" alt="" class="am-img-responsive">
         </p>
         <p>
-            <button type="button" class="am-btn am-btn-warning am-btn-xl am-text-xl am-round product-btn">进入了解</button>
+            <a href="./product-2.html" type="button" class="am-btn am-btn-warning am-btn-xl am-text-xl am-round product-btn">进入了解</a>
         </p>
     </article>
     <!-- 第四屏：稳赢-->
@@ -188,7 +188,7 @@
                     </p>
                 </div>
                 <div class="am-u-sm-6 product-3-btn">
-                    <button type="button" class="am-btn am-btn-warning am-btn-xl am-text-xl am-round am-vertical-align-middle product-btn">进入了解</button>
+                    <a href="./product-3.html" type="button" class="am-btn am-btn-warning am-btn-xl am-text-xl am-round am-vertical-align-middle product-btn">进入了解</a>
                 </div>
 
             </div>
