--- a/pages/login.html
+++ b/pages/login.html
@@ -44,7 +44,7 @@
         <div class="sign-panel am-panel am-panel-default">
             <div class="am-panel-bd am-g">
                 <div class="am-u-sm-12 am-u-lg-6">
-                    <form class="am-form sign-form am-form-horizontal">
+                    <form action="./account.html" class="am-form sign-form am-form-horizontal">
                         <div class="am-u-sm-12 sign-tips">
                             <p class="tips-error am-hide">
                                 <i class="fa fa-exclamation-circle"></i> 密码错误
@@ -85,7 +85,7 @@
                         <div class="am-form-group">
                             <div class="am-u-sm-12">
                                 <button type="submit" class="am-btn sign-btn-submit am-btn-warning am-btn-xl am-btn-block am-round">登 &nbsp;&nbsp; 录</button>
-                                <a class="am-btn am-btn-link sign-btn-reg  am-btn-block">立即注册</a>
+                                <a href="./reg.html" class="am-btn am-btn-link sign-btn-reg  am-btn-block">立即注册</a>
                             </div>
                         </div>
                     </form>
