--- a/pages/reg.html
+++ b/pages/reg.html
@@ -47,7 +47,7 @@
                     <div class="sign-step">
                         <img src="/static/img/sign/reg_step_1.jpg" alt="" class="am-img-responsive">
                     </div>
-                    <form class="am-form sign-form am-margin-top-0 am-form-horizontal">
+                    <form class="am-form sign-form am-margin-top-0 am-form-horizontal" action="reg2.html">
                         <div class="am-u-sm-12 sign-tips">
                             <p class="tips-error am-hide">
                                 <i class="fa fa-exclamation-circle"></i> 密码错误
