--- a/pages/account-coupon.html
+++ b/pages/account-coupon.html
@@ -85,7 +85,7 @@
             <div class="account-breadcrumb am-panel am-panel-default">
                 <div class="am-panel-bd">
                     <ol class="am-breadcrumb">
-                        <li><a href="#" class="am-icon-home">首页</a></li>
+                        <li><a href="./default.html" class="am-icon-home">首页</a></li>
                         <li><a href="./account.html">我的账户</a></li>
                         <li class="am-active">优惠券</li>
                     </ol>
