--- a/pages/account-product-buy-submitting.html
+++ b/pages/account-product-buy-submitting.html
@@ -101,6 +101,9 @@
     <script>
         $(function() {
             $('#doc-my-tabs').tabs();
+            setTimeout(function() {
+                window.location.href = './account-product-buy-ok.html';
+            }, 5000);
         })
 
     </script>
