--- a/pages/account-security-login-records.html
+++ b/pages/account-security-login-records.html
@@ -85,8 +85,8 @@
             <div class="account-breadcrumb am-panel am-panel-default">
                 <div class="am-panel-bd">
                     <ol class="am-breadcrumb">
-                        <li><a href="#" class="am-icon-home">首页</a></li>
-                        <li><a href="#">安全设置</a></li>
+                        <li><a href="./default.html" class="am-icon-home">首页</a></li>
+                        <li><a href="./account-security.html">安全设置</a></li>
                         <li class="am-active">登录记录</li>
                     </ol>
                 </div>
