--- a/pages/account-withdraw-ok.html
+++ b/pages/account-withdraw-ok.html
@@ -60,7 +60,7 @@
                         <hr data-am-widget="divider" style="" class="am-divider am-divider-default" />
                         <p class="am-text-gray">如有任何疑问，可拨打我们的热线电话400-819-0006</p>
                         <div>
-                            <a href="###" class="am-btn am-btn-sm am-btn-warning am-round">返回我的账户</a>
+                            <a href="./account.html" class="am-btn am-btn-sm am-btn-warning am-round">返回我的账户</a>
                         </div>
                     </div>
                 </div>
