--- a/pages/account-withdraw.html
+++ b/pages/account-withdraw.html
@@ -96,7 +96,7 @@
                     <div class="am-panel-bd am-cf">
                         <h1 class="am-u-sm-4 am-u-sm-centered am-u-lg-uncentered">提现</h1>
                         <hr data-am-widget="divider" style="" class="am-divider am-divider-default" />
-                        <form class="am-form am-form-horizontal am-margin-top-xl am-margin-bottom-xl">
+                        <form action="./account-withdraw-submitting.html" class="am-form am-form-horizontal am-margin-top-xl am-margin-bottom-xl">
                             <div class="am-form-group">
                                 <label for="doc-ipt-3" class="am-u-sm-3 am-form-label">可用余额</label>
                                 <div class="am-u-sm-5 am-form-text">
