--- a/pages/account.html
+++ b/pages/account.html
@@ -27,7 +27,7 @@
 
             <div class="am-collapse am-topbar-collapse" id="doc-topbar-collapse">
                 <ul class="am-nav am-nav-pills am-topbar-nav am-topbar-right">
-                    <li class=""><a href="#">首页</a></li>
+                    <li class=""><a href="./default.html">首页</a></li>
                     <li><a href="#">活期</a></li>
                     <li><a href="#">优选</a></li>
                     <li><a href="#">稳赢</a></li>
