--- a/pages/reg3.html
+++ b/pages/reg3.html
@@ -49,7 +49,7 @@
                     </div>
                     <div class="am-u-sm-12 sign-reg-success">
                         <h2 class=" am-text-center am-text-warning am-text-xxl">注册成功</h2>
-                        <button type="submit" class="am-btn sign-btn-submit am-btn-warning am-btn-xl am-btn-block am-round">知 &nbsp; 道 &nbsp; 了</button>
+                        <a href="login.html" class="am-btn sign-btn-submit am-btn-warning am-btn-xl am-btn-block am-round">知 &nbsp; 道 &nbsp; 了</a>
                     </div>
 
                 </div>
