--- a/pages/default.html
+++ b/pages/default.html
@@ -24,8 +24,8 @@
                 <a class="navbar-link" href="./reg.html">注册</a>
             </div>
             <div class="am-hide am-topbar-right am-text-sm topbar-more">
-                <a class="navbar-link active" href="#">我的账户</a>
-                <a class="navbar-link" href="#">退出</a>
+                <a class="navbar-link active" href="./account.html">我的账户</a>
+                <a class="navbar-link" href="./login.html">退出</a>
             </div>
 
             <div class="am-collapse am-topbar-collapse" id="doc-topbar-collapse">
