--- a/pages/login.html
+++ b/pages/login.html
@@ -20,18 +20,18 @@
         <div class="am-container">
             <h1 class="am-topbar-brand"><img src="/static/img/logo.jpg" alt=""></h1>
             <div class="am-topbar-right am-text-xs topbar-more topbar-sign">
-                <a class="navbar-link active" href="#">登录</a>
-                <a class="navbar-link" href="#">注册</a>
+                <a class="navbar-link active" href="./login.html">登录</a>
+                <a class="navbar-link" href="./reg.html">注册</a>
             </div>
 
 
             <div class="am-collapse am-topbar-collapse" id="doc-topbar-collapse">
                 <ul class="am-nav am-nav-pills am-topbar-nav am-topbar-right">
-                    <li class=""><a href="#">首页</a></li>
-                    <li><a href="#">活期</a></li>
-                    <li><a href="#">优选</a></li>
-                    <li><a href="#">稳赢</a></li>
-                    <li><a href="#">新手</a></li>
+                    <li class=""><a href="./default.html">首页</a></li>
+                    <li><a href="./product-1.html">活期</a></li>
+                    <li><a href="./product-2.html">优选</a></li>
+                    <li><a href="./product-3.html">稳赢</a></li>
+                    <li><a href="./product-new.html">新手</a></li>
                 </ul>
             </div>
         </div>
