--- a/pages/reg.html
+++ b/pages/reg.html
@@ -28,10 +28,10 @@
             <div class="am-collapse am-topbar-collapse" id="doc-topbar-collapse">
                 <ul class="am-nav am-nav-pills am-topbar-nav am-topbar-right">
                     <li class=""><a href="#">首页</a></li>
-                    <li><a href="#">活期</a></li>
-                    <li><a href="#">优选</a></li>
-                    <li><a href="#">稳赢</a></li>
-                    <li><a href="#">新手</a></li>
+                    <li><a href="./product-1.html">活期</a></li>
+                    <li><a href="./product-2.html">优选</a></li>
+                    <li><a href="./product-3.html">稳赢</a></li>
+                    <li><a href="./product-new.html">新手</a></li>
                 </ul>
             </div>
         </div>
