--- a/pages/account-security.html
+++ b/pages/account-security.html
@@ -20,18 +20,18 @@
         <div class="am-container">
             <h1 class="am-topbar-brand"><img src="/static/img/logo.jpg" alt=""></h1>
             <div class="am-topbar-right am-text-sm topbar-more">
-                <a class="navbar-link active" href="#">我的账户</a>
-                <a class="navbar-link" href="#">退出</a>
+                <a class="navbar-link active" href="./account.html">我的账户</a>
+                <a class="navbar-link" href="./login.html">退出</a>
             </div>
 
 
             <div class="am-collapse am-topbar-collapse" id="doc-topbar-collapse">
                 <ul class="am-nav am-nav-pills am-topbar-nav am-topbar-right">
                     <li class=""><a href="#">首页</a></li>
-                    <li><a href="#">活期</a></li>
-                    <li><a href="#">优选</a></li>
-                    <li><a href="#">稳赢</a></li>
-                    <li><a href="#">新手</a></li>
+                    <li><a href="./product-1.html">活期</a></li>
+                    <li><a href="./product-2.html">优选</a></li>
+                    <li><a href="./product-3.html">稳赢</a></li>
+                    <li><a href="./product-new.html">新手</a></li>
                 </ul>
             </div>
         </div>
