--- a/pages/layer.html
+++ b/pages/layer.html
@@ -24,17 +24,17 @@
                 <a class="navbar-link" href="#">注册</a>
             </div>
             <div class="am-topbar-right am-text-sm topbar-more">
-                <a class="navbar-link active" href="#">我的账户</a>
-                <a class="navbar-link" href="#">退出</a>
+                <a class="navbar-link active" href="./account.html">我的账户</a>
+                <a class="navbar-link" href="./login.html">退出</a>
             </div>
 
             <div class="am-collapse am-topbar-collapse" id="doc-topbar-collapse">
                 <ul class="am-nav am-nav-pills am-topbar-nav am-topbar-right">
                     <li class="am-active"><a href="#">首页</a></li>
-                    <li><a href="#">活期</a></li>
-                    <li><a href="#">优选</a></li>
-                    <li><a href="#">稳赢</a></li>
-                    <li><a href="#">新手</a></li>
+                    <li><a href="./product-1.html">活期</a></li>
+                    <li><a href="./product-2.html">优选</a></li>
+                    <li><a href="./product-3.html">稳赢</a></li>
+                    <li><a href="./product-new.html">新手</a></li>
                 </ul>
             </div>
         </div>
