--- a/pages/product-2.html
+++ b/pages/product-2.html
@@ -24,7 +24,7 @@
                 <a class="navbar-link" href="./reg.html">注册</a>
             </div>
             <div class="am-hide am-topbar-right am-text-sm topbar-more">
-                <a class="navbar-link active" href="#">我的账户</a>
+                <a class="navbar-link active" href="./account.html">我的账户</a>
                 <a class="navbar-link" href="./login.html">退出</a>
             </div>
 
@@ -34,7 +34,7 @@
                     <li><a href="./product-1.html">活期</a></li>
                     <li class="am-active"><a href="./product-2.html">优选</a></li>
                     <li><a href="./product-3.html">稳赢</a></li>
-                    <li><a href="#">新手</a></li>
+                    <li><a href="./product-new.html">新手</a></li>
                 </ul>
             </div>
         </div>
