--- a/m/default2.html
+++ b/m/default2.html
@@ -39,34 +39,32 @@
         </div>
     </header>
 
-    <div class="layer-header am-text-center">
-        <img src="/static/img/mobile/b2.png" alt="">
-    </div>
+
     <div class="layer-box am-text-center">
-        <h2 class="layer-title am-text-deepblue am-text-xxl">活期</h2>
+        <h2 class="layer-title layer-title-orange am-text-xxl">活期</h2>
         <div class="layer-body layer-bg-orange">
-            <h3 class="layer-ribbon am-center am-text-xxxl am-margin-top-lg am-margin-bottom-0">9.08%</h3>
+            <h3 class="layer-ribbon am-center am-text-xxxl am-margin-sm">9.08%</h3>
             <p class="layer-tips am-text-xxl am-text-white">年化收益率</p>
         </div>
-        <div class="layer-foot">
-            <a href="###" class="am-btn am-btn-xxl am-btn-orange-border am-round am-padding-left-xl am-padding-right-xl">查看详情</a>
+        <div class="layer-foot row">
+            <p class="am-text-deepblue am-text-xl">可够金额：￥0.00</p>
+            <p class="am-u-sm-6 am-u-sm-centered">
+                <a href="###" class="am-btn am-text-xl am-btn-orange am-round am-btn-block">购 &nbsp; 买</a>
+            </p>
         </div>
     </div>
     <div class="layer-pic am-text-center">
-        <img src="/static/pic/m1.png" alt="">
+        <img src="/static/pic/m4.png" alt="">
     </div>
-    <div class="layer-box am-text-center">
-        <h2 class="layer-title am-text-brown am-text-xxl">安全</h2>
-        <div class="layer-body layer-bg-yellow-dark am-padding-top">
-            <img src="/static/pic/m2.png" alt="">
+    <div class="layer-box am-text-center am-margin-bottom-lg">
+        <div class="layer-body layer-bg-tawny-light am-padding-top-lg am-padding-bottom">
+            <img src="/static/pic/m5.png" alt="">
+            <p class="am-text-right am-margin-right">
+                <a href="###" class="am-text-right am-text-tawny-light am-text-lg">查看更多活期说明与问题</a>
+            </p>
         </div>
     </div>
-    <div class="layer-box am-text-center">
-        <h2 class="layer-title am-text-brown am-text-xxl">收益</h2>
-        <div class="layer-body layer-bg-yellow am-padding-top">
-            <img src="/static/pic/m3.png" alt="">
-        </div>
-    </div>
+
 
     <footer data-am-widget="footer" class="am-footer am-footer-gray am-bg-gray am-text-lg" data-am-footer="{  }">
         <div class="am-footer-switch">
